# spec/api.yaml
@@ -9,7 +9,7 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.0
 servers:
-- url: /
+- url: /v0
 paths:
   /products:
     post:
@@ -99,17 +99,36 @@ paths:
               schema:
                 $ref: '#/components/schemas/Message'
       x-codegen-request-body-name: body
+  /productstock:
+    get:
+      summary: Lists products with stock
+      description: Lists products with stock
+      operationId: listProductStocks
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductStocks'
+        400:
+          description: List failed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Message'
+      x-codegen-request-body-name: body
   /sell:
     post:
-      summary: Sell specified stocks and update Inventory
-      description: Sell specified stocks and update Inventory
+      summary: Sell specified products and update Inventory
+      description: Sell specified products and update Inventory
       operationId: sellFromInventory
       requestBody:
-        description: List of stocks
+        description: Sell Order for products
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Inventory'
+              $ref: '#/components/schemas/SellOrder'
         required: true
       responses:
         200:
@@ -161,6 +180,7 @@ components:
           type: string
         contain_articles:
           type: array
+          minItems: 1
           items:
             $ref: '#/components/schemas/Article'
       required:
@@ -175,6 +195,45 @@ components:
       required:
         - art_id
         - amount_of
+    Order:
+      type: object
+      properties:
+        product_name:
+          type: string
+        number:
+          type: integer
+          minimum: 1
+      required:
+        - product_name
+        - number
+    SellOrder:
+      type: object
+      properties:
+        orders:
+          type: array
+          minItems: 1
+          items:
+            $ref: '#/components/schemas/Order'
+      required:
+        - orders
+    ProductStocks:
+      type: object
+      properties:
+        products: 
+          type: array
+          items:
+            $ref: '#/components/schemas/ProductStock'
+    ProductStock:
+      type: object
+      properties:
+        product:
+          $ref: '#/components/schemas/Product'
+        stock:
+          type: integer
+          minimum: 0
+      required:
+        - product
+        - stock
     Message:
       type: object
       properties:
@@ -182,4 +241,3 @@ components:
           type: string
       required:
         - message
-
